[package]
name = "dai-di"
version = "0.1.2"
edition = "2021"
authors = ["Zelda Hessler <crates@zeldas.page>"]
description = "A CLI implementation of the card game Dai Di (a.k.a. Big Two)"
license = "MIT"
homepage = "https://zeldas.page"
documentation = "https://docs.rs/dai-di"
repository = "https://github.com/Velfi/dai-di"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "card_games"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.81"
itertools = "0.12.1"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
